samples/bad/bad003.lat
// Repeated argument name
int main(int x, int x) {
   return x;
}